# tiny-shakespeare-gpt

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: __init__.py  docker-entrypoint.sh  download_dataset.py  generate.py  prepare_data.py  serve.py  train.py
src/tiny_shakespeare_gpt/: __init__.py  config.py  dataset.py  model.py  tokenizer.py  utils.py
static/: index.html  script.js  style.css
tests/: __init__.py  test_basic.py  test_dataset.py  test_model.py  test_tokenizer.py
