[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tiny-shakespeare-gpt"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.6",
    "requests>=2.34.2",
    "safetensors>=0.4.1",
    "tiktoken>=0.13.0",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
    "wandb>=0.16.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff",
    "mypy",
]
